Devices are now detected when attached or detached, and notifications are optionally shown when those events occur. Connections that fail after successfully connecting can now optionally try to reconnect. Added camera settings widgets for MJPEG-over-HTTP connections. Added labels to the TC66 transmit GUI that show the device's firmware version / serial number / power on count. Refactored lots of code along the way.